--- a/main.html
+++ b/main.html
@@ -1,16 +1,64 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Pinterest-like Hero Section</title>
+<style>
+    /* Reset default margin and padding */
+    body{
+        margin: 0;
+        padding: 0;
+    }
+
+    /* Container styles */
+	#hero{
+		display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        background-color: #f5f5f5;
+	}
+	#sec{
+		padding: 20px;
+	}
+	#sec>p{
+		margin-bottom: 30px;
+	}
+
+    /* Image styles */
+    .hero img {
+        width: 100%;
+        max-width: 500px; /* Adjust as needed */
+        height: 250px;
+        object-fit: cover;
+    }
+
+    /* Button or link styles */
+    .explore-button {
+        padding: 10px 20px;
+        background-color: #bd081c;
+        color: white;
+        text-decoration: none;
+        border-radius: 5px;
+        font-weight: bold;
+    }
+
+    .explore-button:hover {
+        background-color: #a30015;
+    }
+</style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <div class="hero">
+        <div id="hero">
+            <img src="https://images.pexels.com/photos/2662116/pexels-photo-2662116.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="Hero Image">
+            <div id="sec">
+				<h1>Welcome to my Pinterest clone</h1>
+	            <p>Discover now inspiration and save your favorite ideas</p>
+	            <a href="#" class="explore-button">Explore Now</a>
+			</div>
+        </div>
+    </div>
 </body>
-
 </html>
